refactor: rewrite plugin strategy