@@ -3,6 +3,7 @@ package com.qzero.server.plugin.utils;
 import com.qzero.server.console.ServerCommandContext;
 import com.qzero.server.console.commands.CommandMethod;
 import com.qzero.server.console.commands.ConsoleCommand;
+import com.qzero.server.plugin.PluginComponentRegistry;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -15,10 +16,8 @@ public class PluginCommandLoadUtils {
 
     private static Logger log= LoggerFactory.getLogger(PluginCommandLoadUtils.class);
 
-    public static Map<String,ConsoleCommand> loadPluginCommandFromClass(Class cls) throws Exception{
-        Map<String,ConsoleCommand> commandMap=new HashMap<>();
-
-        Object instance=cls.newInstance();
+    public static void loadPluginCommandFromClass(Class cls, PluginComponentRegistry registry) throws Exception{
+        Object instance=cls.getDeclaredConstructor().newInstance();
         Method[] methods=cls.getDeclaredMethods();
         for(Method method:methods){
             CommandMethod commandMethodAnnotation=method.getAnnotation(CommandMethod.class);
@@ -28,9 +27,6 @@ public class PluginCommandLoadUtils {
             String commandName=commandMethodAnnotation.commandName();
             if(commandName==null)
                 throw new IllegalArgumentException(String.format("Command name for class %s can not be empty", cls.getName()));
-
-            if(commandMap.containsKey(commandName))
-                throw new IllegalArgumentException("Command %s has more than one implements");
 
             Type[] parameters=method.getParameterTypes();
             if(parameters.length!=3)
@@ -47,7 +43,7 @@ public class PluginCommandLoadUtils {
                         method.getName(),commandName));
 
 
-            commandMap.put(commandName,new ConsoleCommand() {
+            registry.addCommand(commandName,new ConsoleCommand() {
                 @Override
                 public int getCommandParameterCount() {
                     return commandMethodAnnotation.parameterCount();
@@ -56,6 +52,11 @@ public class PluginCommandLoadUtils {
                 @Override
                 public boolean needServerSelected() {
                     return commandMethodAnnotation.needServerSelected();
+                }
+
+                @Override
+                public int minAdminPermission() {
+                    return commandMethodAnnotation.minAdminPermission();
                 }
 
                 @Override
@@ -70,7 +71,7 @@ public class PluginCommandLoadUtils {
                 }
             });
         }
-        return commandMap;
+
     }
 
 }
